service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cafe-web-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: cafe-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
